syntax = "proto3";

option csharp_namespace = "Grpc_Api";

package book;

service Book {

 rpc GetBooks (AllBookRequest) returns (AllBookReply); 
 rpc GetBookById (BookRequest) returns (BookReply);
 rpc CreateBook (CreateBookRequest) returns (CreateBookReply);
 rpc DeleteBookById(BookRequest) returns (BookReply);
}

message BookRequest {
  int32 bookId = 1;
}

message BookReply {
  int32 bookId = 1;
  string isbn = 2;
  string title = 3;
  string description = 4;
  repeated AuthorTypeReply authors = 5;
}

message AuthorTypeReply {
  int32 authorId = 1;
  string fullName = 2;
}

message AllBookRequest {
}

message AllBookReply {
  repeated BookReply books = 1;
}

message CreateBookReply {
  int32 bookId = 1;
  string isbn = 2;
  string title = 3;
  string description = 4;
  repeated AuthorTypeReply authors = 5;
}

message CreateBookRequest {
  string isbn = 1;
  string title = 2;
  string description = 3;
  repeated AuthorTypeReply authors = 4;
}
